[gd_scene load_steps=19 format=3 uid="uid://b67uju8esxiwk"]

[ext_resource type="Texture2D" uid="uid://cwjmv1vtqw24v" path="res://Art/Landscape/village_100.png" id="1_34rjq"]
[ext_resource type="Script" path="res://Scripts/village.gd" id="1_xu65w"]
[ext_resource type="PackedScene" uid="uid://b38wcoytpowl0" path="res://Player/player.tscn" id="2_0vdgv"]
[ext_resource type="PackedScene" uid="uid://bq817p4br4tvh" path="res://dash.tscn" id="3_6qs2i"]
[ext_resource type="Texture2D" uid="uid://b5a1ek3cr51oh" path="res://Art/accessories/shop_art/empty_shop.png" id="4_bppjy"]
[ext_resource type="Texture2D" uid="uid://dbjxv0qisjnsx" path="res://Art/Landscape/black.png" id="5_825aa"]
[ext_resource type="Texture2D" uid="uid://b8ue0j80pfkcq" path="res://Art/accessories/shop_art/item_1.png" id="5_kquq0"]
[ext_resource type="Texture2D" uid="uid://cly1pdjebgssl" path="res://Art/accessories/shop_art/item_2.png" id="8_ea8b1"]
[ext_resource type="Texture2D" uid="uid://bq3os6rha0aej" path="res://Art/accessories/shop_art/item_3.png" id="9_t04tj"]
[ext_resource type="Texture2D" uid="uid://bl2surwvlfwla" path="res://Art/accessories/shop_art/item_4.png" id="10_u81ex"]
[ext_resource type="Texture2D" uid="uid://rftmb27qarr5" path="res://Art/accessories/shop_art/item_5.png" id="11_qg62p"]
[ext_resource type="PackedScene" uid="uid://bhqbel6d4j7o5" path="res://pause_menu.tscn" id="12_uwba6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1xcje"]
size = Vector2(57, 107)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btixc"]
size = Vector2(588.5, 80.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3qo0c"]
size = Vector2(138, 506)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dnjg1"]
size = Vector2(569, 154)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxsp8"]
size = Vector2(71, 659)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6oqmr"]
size = Vector2(78, 141)

[node name="village" type="Node2D"]
script = ExtResource("1_xu65w")

[node name="shop" type="Area2D" parent="."]
collision_layer = 0

[node name="shop_area" type="CollisionShape2D" parent="shop"]
position = Vector2(151.5, 383.5)
shape = SubResource("RectangleShape2D_1xcje")

[node name="collisions" type="StaticBody2D" parent="."]
collision_layer = 20

[node name="floor" type="CollisionShape2D" parent="collisions"]
position = Vector2(260, 479)
shape = SubResource("RectangleShape2D_btixc")

[node name="wall" type="CollisionShape2D" parent="collisions"]
position = Vector2(-63, 249)
shape = SubResource("RectangleShape2D_3qo0c")

[node name="ceiling" type="CollisionShape2D" parent="collisions"]
position = Vector2(251.5, -61)
shape = SubResource("RectangleShape2D_dnjg1")

[node name="wall2" type="CollisionShape2D" parent="collisions"]
position = Vector2(542.5, 189.5)
shape = SubResource("RectangleShape2D_xxsp8")

[node name="next_stage" type="Area2D" parent="."]
collision_layer = 0

[node name="depart" type="CollisionShape2D" parent="next_stage"]
position = Vector2(472, 364.5)
shape = SubResource("RectangleShape2D_6oqmr")

[node name="Player" parent="." instance=ExtResource("2_0vdgv")]
position = Vector2(33, 426)

[node name="Dash" parent="Player" instance=ExtResource("3_6qs2i")]

[node name="shop_ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 11.0
offset_top = 131.0
offset_right = 223.0
offset_bottom = 335.0

[node name="TextureRect" type="TextureRect" parent="shop_ui"]
layout_mode = 0
offset_right = 216.0
offset_bottom = 216.0
texture = ExtResource("4_bppjy")

[node name="background" type="TextureRect" parent="."]
z_index = -90
offset_left = -1436.0
offset_top = -1096.0
offset_right = 1731.0
offset_bottom = 1473.0
texture = ExtResource("5_825aa")
stretch_mode = 1

[node name="village_texture" type="TextureRect" parent="."]
z_index = -15
offset_right = 256.0
offset_bottom = 256.0
scale = Vector2(2, 2)
texture = ExtResource("1_34rjq")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(256, 256)
zoom = Vector2(0.7, 0.7)

[node name="item_1" type="Button" parent="."]
z_as_relative = false
offset_left = 51.0
offset_top = 219.0
offset_right = 81.0
offset_bottom = 249.0
icon = ExtResource("5_kquq0")
flat = true

[node name="item_2" type="Button" parent="."]
z_as_relative = false
offset_left = 77.0
offset_top = 215.0
offset_right = 109.0
offset_bottom = 249.0
icon = ExtResource("8_ea8b1")
flat = true

[node name="item_3" type="Button" parent="."]
z_as_relative = false
offset_left = 103.0
offset_top = 213.0
offset_right = 135.0
offset_bottom = 249.0
disabled = true
icon = ExtResource("9_t04tj")
flat = true

[node name="item_4" type="Button" parent="."]
z_as_relative = false
offset_left = 129.0
offset_top = 216.0
offset_right = 161.0
offset_bottom = 252.0
disabled = true
icon = ExtResource("10_u81ex")
flat = true

[node name="item_5" type="Button" parent="."]
z_as_relative = false
offset_left = 155.0
offset_top = 215.0
offset_right = 189.0
offset_bottom = 251.0
icon = ExtResource("11_qg62p")
flat = true

[node name="prices" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(11, 131)

[node name="item1label" type="Label" parent="prices"]
offset_left = 50.0
offset_top = 112.0
offset_right = 90.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "5"

[node name="item2label" type="Label" parent="prices"]
offset_left = 76.0
offset_top = 112.0
offset_right = 116.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "1
"

[node name="item3label" type="Label" parent="prices"]
offset_left = 102.0
offset_top = 112.0
offset_right = 142.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "0
"

[node name="item4label" type="Label" parent="prices"]
offset_left = 128.0
offset_top = 112.0
offset_right = 168.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "0

"

[node name="item5label" type="Label" parent="prices"]
offset_left = 155.0
offset_top = 112.0
offset_right = 195.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "5"

[node name="scale_count" type="Label" parent="prices"]
offset_left = 122.0
offset_top = 138.0
offset_right = 144.0
offset_bottom = 161.0

[node name="PauseMenu" parent="." instance=ExtResource("12_uwba6")]

[connection signal="ready" from="." to="Player" method="_on_village_ready"]
[connection signal="body_entered" from="shop" to="." method="_on_shop_body_entered"]
[connection signal="body_exited" from="shop" to="." method="_on_shop_body_exited"]
[connection signal="body_entered" from="next_stage" to="." method="_on_next_stage_body_entered"]
[connection signal="button_down" from="item_1" to="." method="_on_item_1_button_down"]
[connection signal="button_down" from="item_2" to="." method="_on_item_2_button_down"]
[connection signal="button_down" from="item_3" to="." method="_on_item_3_button_down"]
[connection signal="button_down" from="item_4" to="." method="_on_item_4_button_down"]
[connection signal="button_down" from="item_5" to="." method="_on_item_5_button_down"]
